--- a/whorlwind-sample/build.gradle
+++ b/whorlwind-sample/build.gradle
@@ -4,9 +4,10 @@ buildscript {
   }
 
   dependencies {
-    classpath 'com.android.tools.build:gradle:1.5.0'
-    classpath 'me.tatarka:gradle-retrolambda:3.2.4'
+    classpath 'com.android.tools.build:gradle:2.1.3'
+    classpath 'me.tatarka:gradle-retrolambda:3.2.5'
     classpath 'me.tatarka.retrolambda.projectlombok:lombok.ast:0.2.3.a2'
+    classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
   }
 
   // The version the android plugin uses doesn't support lambdas. We're bringing a different one.
@@ -15,20 +16,22 @@ buildscript {
 
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'com.neenbedankt.android-apt'
 
 dependencies {
   compile project(':whorlwind')
 
-  compile 'io.reactivex:rxjava:1.1.1'
-  compile 'io.reactivex:rxandroid:1.1.0'
-  compile 'com.jakewharton:butterknife:7.0.1'
-  compile 'com.jakewharton.rxbinding:rxbinding:0.1.0'
+  compile 'io.reactivex:rxjava:1.1.9'
+  compile 'io.reactivex:rxandroid:1.2.1'
+  compile 'com.jakewharton:butterknife:8.2.1'
+  apt 'com.jakewharton:butterknife-compiler:8.2.1'
+  compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
   compile 'com.mattprecious.swirl:swirl:1.0.0'
 }
 
 android {
   compileSdkVersion 24
-  buildToolsVersion "23.0.2"
+  buildToolsVersion "24.0.1"
 
   defaultConfig {
     minSdkVersion 15
