--- a/whorlwind-sample/build.gradle
+++ b/whorlwind-sample/build.gradle
@@ -15,9 +15,9 @@ apply plugin: 'me.tatarka.retrolambda'
 dependencies {
   compile project(':whorlwind')
 
-  compile 'io.reactivex:rxjava:1.2.3'
-  compile 'io.reactivex:rxandroid:1.2.1'
-  compile 'com.jakewharton:butterknife:8.4.0'
+  compile 'io.reactivex.rxjava2:rxjava:2.0.0-RC1'
+  compile 'io.reactivex.rxjava2:rxandroid:2.0.0-RC1'
+  compile "com.github.akarnokd:rxjava2-interop:0.1.2"
   annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
   compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
   compile 'com.mattprecious.swirl:swirl:1.0.0'
@@ -42,5 +42,9 @@ android {
 
   lintOptions {
     abortOnError false
+  }
+
+  packagingOptions {
+    exclude 'META-INF/rxjava.properties'
   }
 }
