--- a/whorlwind-sample/build.gradle
+++ b/whorlwind-sample/build.gradle
@@ -15,12 +15,11 @@ apply plugin: 'me.tatarka.retrolambda'
 dependencies {
   compile project(':whorlwind')
 
-  compile 'io.reactivex.rxjava2:rxjava:2.0.1'
+  compile 'io.reactivex.rxjava2:rxjava:2.0.6'
   compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-  compile "com.github.akarnokd:rxjava2-interop:0.6.0"
   compile 'com.jakewharton:butterknife:8.4.0'
   annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
-  compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
+  compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
   compile 'com.mattprecious.swirl:swirl:1.0.0'
 }
 
