--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,15 @@
-allprojects {
-  buildscript {
-    repositories {
-      jcenter()
-      mavenCentral()
-    }
+buildscript {
+  repositories {
+    google()
+    jcenter()
+    mavenCentral()
   }
+  dependencies {
+    classpath 'com.android.tools.build:gradle:3.0.1'
+  }
+}
+
+subprojects {
   dependencies {
     repositories {
       jcenter()
