--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,8 @@
 language: android
 
-android:
-  components:
-    - tools
-    - tools
-    - platform-tools
-    - android-25
-    - build-tools-25.0.1
-    - extra-android-m2repository
+before_install:
+  - mkdir "$ANDROID_HOME/licenses" || true
+  - echo "d56f5187479451eabf01fb78af6dfcb131a6481e" > "$ANDROID_HOME/licenses/android-sdk-license"
 
 jdk:
   - oraclejdk8
