--- a/whorlwind-sample/build.gradle
+++ b/whorlwind-sample/build.gradle
@@ -1,31 +1,7 @@
-buildscript {
-  repositories {
-    jcenter()
-  }
-
-  dependencies {
-    classpath 'com.android.tools.build:gradle:2.2.2'
-    classpath 'me.tatarka:gradle-retrolambda:3.4.0'
-  }
-}
-
 apply plugin: 'com.android.application'
-apply plugin: 'me.tatarka.retrolambda'
-
-dependencies {
-  compile project(':whorlwind')
-
-  compile 'io.reactivex.rxjava2:rxjava:2.0.6'
-  compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-  compile 'com.jakewharton:butterknife:8.4.0'
-  annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
-  compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
-  compile 'com.mattprecious.swirl:swirl:1.0.0'
-}
 
 android {
   compileSdkVersion 25
-  buildToolsVersion '25.0.1'
 
   defaultConfig {
     minSdkVersion 15
@@ -43,4 +19,15 @@ android {
   lintOptions {
     abortOnError false
   }
+}
+
+dependencies {
+  implementation project(':whorlwind')
+
+  implementation 'io.reactivex.rxjava2:rxjava:2.0.6'
+  implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+  implementation 'com.jakewharton:butterknife:8.4.0'
+  annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+  implementation 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
+  implementation 'com.mattprecious.swirl:swirl:1.0.0'
 }
