--- a/whorlwind/build.gradle
+++ b/whorlwind/build.gradle
@@ -1,14 +1,7 @@
-buildscript {
-  dependencies {
-    classpath 'com.android.tools.build:gradle:2.2.2'
-  }
-}
-
 apply plugin: 'com.android.library'
 
 android {
   compileSdkVersion 25
-  buildToolsVersion '25.0.1'
 
   defaultConfig {
     minSdkVersion 15
@@ -27,15 +20,15 @@ android {
 }
 
 dependencies {
-  compile 'com.android.support:support-compat:25.0.1'
-  compile 'com.squareup.okio:okio:1.11.0'
-  compile 'io.reactivex.rxjava2:rxjava:2.0.6'
+  implementation 'com.android.support:support-compat:25.0.1'
+  api 'com.squareup.okio:okio:1.11.0'
+  api 'io.reactivex.rxjava2:rxjava:2.0.6'
 
   // Test dependencies.
-  testCompile 'junit:junit:4.12'
-  testCompile 'com.google.truth:truth:0.30'
-  testCompile 'org.mockito:mockito-core:1.10.19'
-  testCompile 'org.robolectric:robolectric:3.0'
+  testImplementation 'junit:junit:4.12'
+  testImplementation 'com.google.truth:truth:0.30'
+  testImplementation 'org.mockito:mockito-core:1.10.19'
+  testImplementation 'org.robolectric:robolectric:3.0'
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
