--- a/whorlwind/build.gradle
+++ b/whorlwind/build.gradle
@@ -17,6 +17,11 @@ android {
     textReport true
     ignore 'InvalidPackage'
   }
+
+  // TODO replace with https://issuetracker.google.com/issues/72050365 once released.
+  libraryVariants.all {
+    it.generateBuildConfig.enabled = false
+  }
 }
 
 dependencies {
