--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,14 @@ buildscript {
     mavenCentral()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.0.1'
+    classpath 'com.android.tools.build:gradle:3.1.2'
   }
 }
 
 subprojects {
   dependencies {
     repositories {
+      google()
       jcenter()
       mavenCentral()
     }
