--- a/whorlwind/build.gradle
+++ b/whorlwind/build.gradle
@@ -25,6 +25,7 @@ android {
 }
 
 dependencies {
+  api 'androidx.annotation:annotation:1.0.2'
   implementation 'androidx.core:core:1.0.2'
   api 'com.squareup.okio:okio:1.14.1'
   api 'io.reactivex.rxjava2:rxjava:2.2.12'
